<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_workouts"
        android:icon="@drawable/ic_workouts"
        android:title="@string/nav_workouts"
        app:tooltipText="@string/nav_workouts" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
...
